# speech2caret

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check_test_all.yaml  publish.yaml
benchmark/: README.md  benchmark.py
src/speech2caret/: cli.py  config.py  main.py  recorder.py  speech_to_text.py  utils.py  virtual_keyboard.py
tests/: conftest.py  test_config.py  test_main.py  test_recorder.py  test_speech_to_text.py  test_utils.py  test_virtual_keyboard.py
